2013-10-03  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* operation/invoices/invoice_detail.php: Now is possible to
	filter the results by the invoice status. Fixed the 'to' filter.
	Deleted the column 'description'. Now the offset are keeped when
	an invoice is unlocked/locked or deleted and when a new search
	is done.
	
2013-10-03  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/functions_crm.php: Fixed an error on the function
	"crm_change_invoice_lock".
	
	* operation/companies/company_detail.php,
	  operation/invoices/invoice_detail.php: Now the actions of
	  delete, lock or unlock are registered in the log. Changed
	  the ACL of delete, lock and unlock.
	
	* operation/invoices/invoices.php: Audited some actions. 
	
2013-10-03  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/functions_incidents.php: Fixed the order by id of the
	incidents search section.
	
2013-10-02  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* operation/leads/lead_detail.php: Fixed an error related with
	the validation of the lead name.
	
2013-10-02  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* godmode/setup/setup.php: Changed a label.
	
	* include/functions_html.php: Now the autorefresh also reloads the
	incident custom searches.
	
	* include/functions_incidents.php: Modified the function
	"filter_incidents" to order the incident search depending on the
	'order_by' filter. Modified the function "incidents_search_result"
	to show the control that orders the search by id.
	
	* operation/incidents/incident_search.php: Added the parameter
	'order_by'.
	
	* operation/incidents/incident_search_logic.php: Added the javascript
	function "changeIdIncidentOrder". Added the decoding of the order by
	filter before creating a custom search.
	
	* operation/leads/lead_detail.php: Now the name of the lead can be
	duplicated.
	
2013-10-02  Sancho Lerena <slerena@artica.es>

	* include/mailtemplates/incident_create.tpl